chore: 继续拆分并收敛服务实现逻辑